--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 <style>
 body {
-	width:310px;
-	height: 480px;
-	overflow: hidden;
+	
 	background-color:#dfe3ee;
 }
 
@@ -102,7 +100,7 @@ $(document).ready(function() {
 	  </header>
 	</section>
 	<hr/>
-	<div id="resultado" style="width: 310px; height: 400px; overflow-y: scroll;" >
+	<div id="resultado" style="height: 400px; overflow-y: scroll;" >
 	<p style="font-size:18px;" >Pesquise os pontos turisticos da cidade do Recife e agende uma visita através do Google Calendar</p>
 	</div>
 </body>
