--- a/map.html
+++ b/map.html
@@ -15,13 +15,11 @@
 
 <style>
 body {
-	width:320px;
-	height: 480px;
-	overflow: hidden;
+	
 	background-color:#dfe3ee;
 }
 
-#map { height: 250px; }
+#map { height: 17em; }
 
 p {
 	font-size: 12px;
